FUCK YES AFTER 1HR I FUCKING DID IT MAYBE MORE BUT ITS FULL SLIDER SHIT AND STORY AH BULLSHIT YES

--- a/index.html
+++ b/index.html
@@ -8,8 +8,63 @@
     <body>
 
         <header>
-            
+            <h1 class="cum">LANDING</h1>
         </header>
+
+        <div class="memory-container">
+            <h1 class="cum">ERM CODING KNOWLEDGE</h1>
+            <div class="memory">
+                I've been coding since I was 8 years old I started off with basic stuff like scratch, which is coding
+                basically for kids, then when I was 10 I moved onto a game engine called Godot which uses python a very
+                easy and simple language I would say. I made a few games into Godot then when I was ehh maybe 11-12 I started
+                learning just base python got used to alot of the librarys made a ton of fun stuff then when I was 13 I learned
+                HTMl/CSS just kept making stuff with that as javascript is a pain in the ass, I now know Javascript not to the best
+                of what I should but I know more than I used to! So this sets it at how old am I, on github my bio says 16 but 
+                im actually 14 turned 15 later this year also for people that hate reading I made you a little slide graph whatever
+                the fuck its called right below here! :3
+            </div>      
+        </div>
+
+        <div class="memory-container">
+            <h1 class="cum">FOR PEOPLE THAT CANT READ</h1>
+            <div class="memory">
+
+                <div class="blueoutdidcontainer">
+                    <img src="media/html.webp" draggable="false" class="happylogo">
+
+                    <div class="bluedudecontainer">
+                        <div class="blueman"></div>
+                    </div>
+                </div>
+
+                <div class="blueoutdidcontainer">
+                    <img src="media/python.webp" draggable="false" class="happylogo">
+
+                    <div class="bluedudecontainer">
+                        <div class="blueman" style="width: 250px !important;"></div>
+                    </div>
+                </div>
+
+                <div class="blueoutdidcontainer">
+                    <img src="media/godot.svg" draggable="false" class="happylogo">
+
+                    <div class="bluedudecontainer">
+                        <div class="blueman" style="width: 220px !important;"></div>
+                    </div>
+                </div>
+
+                <div class="blueoutdidcontainer">
+                    <img src="media/java.png" draggable="false" class="happylogo">
+
+                    <div class="bluedudecontainer">
+                        <div class="blueman" style="width: 120px !important;"></div>
+                    </div>
+                </div>
+
+            </div>      
+        </div>
+
+
 
 
 
