--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
             </div>      
         </div>
 
+        <h1 class="cum single-thingy">IMAGE GALLERY</h1>
+
+        <div class="imagegallerycontainer">
+            
+
+            <img class="imagegallerymemory" src="media/food_ricecrispytreat.png" draggable="false">
+            <img class="imagegallerymemory" src="media/facereveal.png" draggable="false">
+            <img class="imagegallerymemory" src="media/funnyahscreenshot.png" draggable="false">
+ 
+        </div>
+
+
+
 
 
 
