vrchat :D fr fr fr fr fr

--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
                 <img class="imagegallerymemory" src="media/angeldu_onesgftryingtopushmeoffedge.png" draggable="false">             
             </div>
 
+            <div class="memeorythingcontainerimage">
+                <p class="imagethingygalerytextitem">Me playing vr chat on my vr headset fr fr fr</p>
+                <img class="imagegallerymemory" src="media/meplayingvrchatfrfr.png" draggable="false">             
+            </div>
+
  
         </div>
 
