beaware comment abt code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+    <!--the code is messy as fuck dont mind the naming conventions on how i named stuff this website took 2hrs to make in total the html/css took and hour and doing screenshots took probably an hour or 30 minutes itself-->
     <head>
         <title>Landing</title>
         <link rel="icon" href="media/favicon.jpg">
